fix overlay content overflow

--- a/styl/style.styl
+++ b/styl/style.styl
@@ -321,7 +321,7 @@ textarea
     div
         text-align: left;
         padding: 10px;
-        overflow: scroll;
+        overflow: auto;
         height: -webkit-calc(100% - 97px);
         height: unquote('-webkit-calc(100% - 97px)');
         height: unquote('-moz-calc(100% - 97px)');
@@ -355,11 +355,12 @@ textarea
     div.tutorial
         width: 100%;
         height: 100%;
-        background: rgb(235, 235, 235);
         padding 0
         margin 0
+        text-align center
         img
-            width 300px
+            width 285px
+            margin 0 auto;
     i
         position: absolute;
         bottom: 40px;
@@ -394,7 +395,7 @@ textarea
         font-size: 16px;
         color: rgb(68, 68, 68);
         padding 10px
-        overflow:scroll;
+        overflow:auto;
         height:43px
         background: rgb(250, 250, 250);
     span
